# nix-config

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .sops.yaml  CHANGELOG.md  LICENSE  MIGRATION_BACKUP.md  PROFILE_MAP.md  README.md  flake.nix  justfile  shell.nix  test-fzf-commands.sh  test-setup.sh  treefmt.nix
.github/workflows/: ci.yml  update-flake.yml
.superpowers/sdd/: task-1-report.md  task-3-report.md
docs/workflows/: ai-agent-workflows.md  mcp-curation.md
home/: common-pkg.nix  common.nix  custom-pkgs.nix  darwin.nix  git-hooks.nix  kube-config.nix  kube.nix  nixos.nix  python-pkg.nix  secrets_example.nix
home/aerospace/: default.nix
home/custom/: default.nix  packages.nix
home/devshell/: README.md  default.nix  devshell.sh
home/emacs/: default.nix
home/git/: git-hooks.nix
home/kube/: kube-config.nix  kube.nix
home/neovide/: default.nix
home/neovim/: default.nix
home/profiles/: README.md  darwin.nix  desktop.nix  development.nix  kube-dev.nix  macos.nix  minimal.nix  nixos.nix  secrets.nix
home/programs/: default.nix
lib/: builders.nix  devshells.nix  install-pre-commit-hook.nix  pre-commit.nix  theme.nix
overlays/: default.nix  direnv.nix  emacs.nix  neovide.nix  neovim.nix  nodejs.nix  python.nix
pkgs/: README.md  default.nix  dev-tools.nix  kubernetes-tools.nix
secrets/: secrets.nix  secrets.yaml
templates/ai-python/: .gitignore  flake.nix  justfile  pyproject.toml
templates/ai-python/evals/: cases.jsonl  run_eval.py
tests/: capability-imports.sh  package-imports.sh  program-imports.sh  sops-imports.sh
(+375 files in other folders)
