[project]
name = "ai-app"
version = "0.1.0"
description = "Small AI application with reproducible evals"
requires-python = ">=3.13"
dependencies = [
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "rich>=13.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
